--- a/scss/components-libs.scss
+++ b/scss/components-libs.scss
@@ -392,7 +392,6 @@
 
 	.ev-tab-container {
 		@extend %clearfix !optional;
-		overflow: hidden;
 	}
 
 	.ev-tab {
